sm-frontendDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secret-manager-frontend
  labels:
    app: secret-manager-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secret-manager-frontend
  template:
    metadata:
      labels:
        app: secret-manager-frontend
    spec:
      containers:
      - name: sm-frontend
        image: pra1tik/sm-node:latest
        ports:
        - containerPort: 80
