sm-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sm-api-service
spec:
  selector:
    app: secret-manager-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
