sm-frontend-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: sm-frontend-service
spec:
  selector:
    app: secret-manager-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer


# http://8001.server.hem.xyz.np/api/v1
