sm-metallb.yaml
#
apiVersion: v1
kind: Service
metadata:
  name: sm-api-service
spec:
  selector:
    app: secret-manager-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer

---
#
apiVersion: v1
kind: Service
metadata:
  name: sm-frontend-service
spec:
  selector:
    app: secret-manager-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
