sm-ingress.yaml
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
  - host: sm-api.pratik.np
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sm-api-service
            port:
              number: 8080
  ingressClassName: nginx


---
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
  - host: sm-ui.pratik.np
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sm-frontend-service
            port:
              number: 80
  ingressClassName: nginx
